--- a/README
+++ b/README
@@ -1,7 +1,11 @@
-You should use the 'make' command to build your filesystem executable
-and the formatting program.  We have provided skeleton code in
-3600fs.c and 3600mkfs.c to get you started.  You will need to fill
-in the stub code as specified by the assignment.
+We are choosing to implement the inode file system, as it poses a challenge and provides a greater learning experience. We have the basic block implementation complete for the first three blocks (and free blocks), and plan to continue forward after drafting out a roadmap on how to tackle the remainder of the project.
+
+Currently, running 'make test' fails for unknown reasons, while simply running the './test' script has the milestone tests passing. We also tested in GDB and cannot find the error that is causing the test script to fail while running in the 'make test' environment.
+
+
+
+
+To run the code:
 
 In brief, you should first compile everything by running
 
@@ -31,6 +35,3 @@ executable will exit when you unmount the file system.
 
 We are using FUSE version 2.6. This is important to know because
 different FUSE versions have slightly different interfaces.
-
-You will find a great deal of resources about FUSE on the Web.  Please
-use Piazza to ask questions if you're stuck.
